force-app/main/default/objects/inspire1__Collaborator__c/inspire1__Collaborator__c.object-meta.xml
<CustomObject>
    <description>Inspire Planner - This object defines access permissions to the Inspire Project</description>
    <label>Collaborator</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Collaborators Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaborators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>