force-app/main/default/objects/inspire1__Collaborator__c/fields/inspire1__Contact__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact the project has been shared with.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Collaborators</relationshipLabel>
    <relationshipName>Collaborators</relationshipName>
    <type>Lookup</type>
</CustomField>