force-app/main/default/objects/inspire1__Collaborator__c/fields/inspire1__IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>inspire1__IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>