force-app/main/default/objects/inspire1__Collaborator__c/fields/inspire1__Mode__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Portfolio</fullName>
            </value>
            <value>
                <fullName>Project &amp; Portfolio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>