force-app/main/default/objects/inspire1__Collaborator__c/fields/inspire1__Name__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Name__c</fullName>
    <description>Display name of User or Contact.</description>
    <formula>inspire1__User__r.FirstName + &quot; &quot; + inspire1__User__r.LastName + inspire1__Contact__r.FirstName + &quot; &quot; + inspire1__Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>