force-app/main/default/objects/inspire1__Collaborator__c/fields/inspire1__Permission_Level__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Permission_Level__c</fullName>
    <description>Defines access level to project for User.</description>
    <label>Permission Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Editor</fullName>
            </value>
            <value>
                <fullName>Viewer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>