force-app/main/default/objects/inspire1__Collaborator__c/fields/inspire1__Project__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project__c</fullName>
    <description>Project being shared with User or Contact.</description>
    <label>Project</label>
    <referenceTo>inspire1__Project__c</referenceTo>
    <relationshipLabel>Collaborators</relationshipLabel>
    <relationshipName>Collaborators</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>