force-app/main/default/objects/inspire1__Collaborator__c/fields/inspire1__Tasks_Accessibility__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Tasks_Accessibility__c</fullName>
    <label>Tasks Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Project</fullName>
            </value>
            <value>
                <fullName>Assigned Tasks Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>