force-app/main/default/objects/inspire1__Collaborator__c/fields/inspire1__User__c.field-meta.xml
<CustomField>
    <fullName>inspire1__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that project has been shared with.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Collaborators</relationshipName>
    <type>Lookup</type>
</CustomField>